utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_for_tagged_repr_enum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 2272
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "tag": {
          "enum": [
            0
          ],
          "type": "integer"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "tag": {
          "enum": [
            1
          ],
          "type": "integer"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "tag": {
          "enum": [
            2
          ],
          "type": "integer"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    }
  ]
}
