utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_multiple_serde_definitions.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "ID": {
      "type": "string"
    }
  },
  "type": "object"
}
