utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_unnamed_title-2.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: enum_value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "$ref": "#/components/schemas/UnnamedEnum"
    }
  ],
  "title": "This is enum ref title"
}
