utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_unnamed_title.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "items": {
    "type": "string"
  },
  "title": "This is vec title",
  "type": "array"
}
