utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_custom_field_with_schema.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "id": {
      "description": "this is the description",
      "format": "email",
      "type": "string"
    }
  },
  "required": [
    "id"
  ],
  "type": "object"
}
