utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_default_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "field": {
      "type": "string"
    }
  },
  "type": "object"
}
