utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_default_struct.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "field": {
      "default": "",
      "type": "string"
    }
  },
  "type": "object"
}
