utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_docstring_on_tuple_variant_first_element_option.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "description": "top level doc for My enum",
  "oneOf": [
    {
      "description": "doc for tuple variant with Option as first element - I now produce a description",
      "properties": {
        "TupleVariantWithOptionFirst": {
          "description": "doc for tuple variant with Option as first element - I now produce a description",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "TupleVariantWithOptionFirst"
      ],
      "type": "object"
    },
    {
      "description": "doc for tuple variant without Option as first element - I produce a description",
      "properties": {
        "TupleVariantWithNoOption": {
          "description": "doc for tuple variant without Option as first element - I produce a description",
          "type": "string"
        }
      },
      "required": [
        "TupleVariantWithNoOption"
      ],
      "type": "object"
    }
  ]
}
