utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_explicit_value_type.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "any": {}
  },
  "required": [
    "any"
  ],
  "type": "object"
}
